syntax = "proto3";

package configure;
option go_package = "./v1;v1";
import "validate/validate.proto";


message Business{
  uint32 id = 1 ;
  uint32 server_id = 2;
  string type = 3;
  string keyword = 4;
  string description = 5;
  uint32 created_at = 6;
  uint32 updated_at = 7;
}

message PageBusinessRequest{
  uint32 page = 1[(validate.rules).uint32 = {gt: 0}];
  uint32 page_size = 2[(validate.rules).uint32 = {gt: 0,lte:50}];
  optional string keyword = 3;
  uint32 server_id = 4[(validate.rules).uint32 = {gt: 0}];
}

message PageBusinessReply {
  uint32 total = 1;
  repeated Business list = 2;
}

// 新增业务key
message AddBusinessRequest {
  uint32  server_id = 1[(validate.rules).uint32 = {gt: 0}];
  string keyword = 2[(validate.rules).string = {min_len: 1, max_len: 32}];
  string description = 3[(validate.rules).string = {min_len: 1, max_len: 128}];
  string type = 4[(validate.rules).string = {min_len: 1, max_len: 12}];
}

// 修改业务key
message UpdateBusinessRequest {
  uint32 id = 1 [(validate.rules).uint32 = {gt: 0}];
  string keyword = 3[(validate.rules).string = {min_len: 1, max_len: 32}];
  string description = 4[(validate.rules).string = {min_len: 1, max_len: 128}];
  string type = 5[(validate.rules).string = {min_len: 1, max_len: 12}];
}

// 删除业务key
message DeleteBusinessRequest {
  uint32 id = 1 [(validate.rules).uint32 = {gt: 0}];
}
