syntax = "proto3";

package v1;
option go_package = "./v1;v1";
import "validate/validate.proto";

message Server{
  int64 id = 1;
  string keyword = 2;
  string name = 3;
  string description = 4;
  optional string operator = 5;
  optional int64 operator_id = 6;
}

message PageServerRequest{
    int32 page = 1[(validate.rules).int32 = {gt: 0}];
    int32 page_size = 2[(validate.rules).int32 = {gt: 0,lte:50}];
    optional string keyword = 3;
}

message PageServerReply {
  repeated Server list = 1;
}

// 新增环境
message AddServerRequest {
  string keyword = 1[(validate.rules).string = {min_len: 1, max_len: 32}];
  string name = 2[(validate.rules).string = {min_len: 1, max_len: 32}];
  string description = 3[(validate.rules).string = {min_len: 1, max_len: 128}];
}

// 修改环境
message UpdateServerRequest {
  int64 id = 1 [(validate.rules).int64 = {gt: 0}];
  string keyword = 2[(validate.rules).string = {min_len: 1, max_len: 32}];
  string name = 3[(validate.rules).string = {min_len: 1, max_len: 32}];
  string description = 4[(validate.rules).string = {min_len: 1, max_len: 128}];
}

// 删除环境
message DeleteServerRequest {
  int64 id = 1 [(validate.rules).int64 = {gt: 0}];
}
